--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -18,10 +18,10 @@
             <a href="#">Register</a>
         </section>
     </header>
-
-    <section >
-
-
-    </section>
+    <div class="container">
+      <div class="jumbotron">
+        {% block content %}{% endblock %}
+      </div>
+    </div>
 </body>
 </html>
