--- a/viewer/templates/course.html
+++ b/viewer/templates/course.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>{{ Course }}</h1>
+    <h1>{{ course }}</h1>
     <div class="post-display">
       <ul>
           <h3>Posts</h3>
