Zrobione templatsy dla logowania, widoku klasy i widoku grup, zaktualizowany css, poprawki drobne w base.html

--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -38,13 +38,22 @@
                 </div>
         </section>
     </header>
-    <div class="title">
+
         {% block site_title %}
         {% endblock %}
-    </div>
-    <div class="container">
+
+
         {% block content %}
         {% endblock %}
-    </div>
+
+    <footer>
+        <p class="enterprise">
+            DreamTeam Software House Ltd.
+        </p>
+        <p class="copyrights">
+            Photo Author: Freddie Marriage /Source: https://unsplash.com/photos/vSchPA-YA_A
+        </p>
+
+    </footer>
 </body>
 </html>
