--- a/accounts/templates/accounts_form.html
+++ b/accounts/templates/accounts_form.html
@@ -1,9 +1,11 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Wyślij" class="btn btn-primary">
-    </form>
+    <div class="login">
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Submit" class="btn btn-primary">
+        </form>
+    </div>
 {% endblock %}
