--- a/viewer/static/css/styles.css
+++ b/viewer/static/css/styles.css
@@ -3,14 +3,13 @@ body {
     background-size: cover;
     height: 100%;
     overflow: hidden;
+    font-family: Verdana, serif;
 }
 
 .topnav {
-    background-color: #333;
+    background-color: rgba(51, 51, 51, 0.3);
     overflow: hidden;
-    opacity: 30%;
     font-size: 30px;
-    font-family: Verdana, serif;
 }
 
 /* Style the links inside the navigation bar */
@@ -21,7 +20,7 @@ body {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 30px;
-    font-family: Verdana, serif;
+    font-weight: bold;
 }
 .topnav a {
     float: right;
@@ -30,7 +29,6 @@ body {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 30px;
-    font-family: Verdana, serif;
 }
 
 /* Change the color of links on hover */
@@ -45,6 +43,126 @@ body {
     color: white;
 }
 
-.post-display {
+.login {
+    position: absolute;
+    top: calc(20% - 75px);
+    float: left;
+    font-size: 20px;
+    color: #f2f2f2;
+    background-color: rgba(51, 51, 51, 0.3);
+    display: block;
+    padding: 5px;
+    z-index: 2;
+}
 
+.login .btn-primary {
+    margin: 15px auto;
+    text-align: center;
+    display: inline;
+    width: 175px;
+    padding: 5px 15px;
+}
+
+.a_list {
+    color: rgb(255, 255, 255);
+    width: 350px;
+    height: 450px;
+    margin-left: 10px;
+    padding: 5px;
+    overflow: auto;
+}
+.a_list li {
+    display: inline-block;
+    width: auto;
+    background: rgba(51, 51, 51, 0.3);
+    padding: 5px 10px;
+    margin: 5px 0;
+}
+.a_list li:nth-child(odd) {
+    background: rgba(51, 51, 51, 0.5);
+}
+.a_list li:nth-child(even) {
+    background: rgba(51, 51, 51, 0.3);
+}
+
+.flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    background-color: rgba(51, 51, 51, 0.3);
+}
+
+.members_display {
+    color: rgb(255, 255, 255);
+    width: 300px;
+    height: 450px;
+    float: left;
+    overflow: auto;
+}
+.members_display li {
+    display: inline-block;
+    width: auto;
+    font-size: 15px;
+    background: rgba(51, 51, 51, 0.3);
+    padding: 5px;
+    margin: 5px 0;
+}
+.members_display li:nth-child(odd) {
+    background: rgba(51, 51, 51, 0.5);
+}
+.members_display li:nth-child(even) {
+    background: rgba(51, 51, 51, 0.3);
+}
+
+.courses_display {
+    color: rgb(255, 255, 255);
+    width: 400px;
+    height: 450px;
+    float: right;
+    overflow: auto;
+}
+.courses_display li {
+    display: inline-block;
+    width: auto;
+    font-size: 15px;
+    background: rgba(51, 51, 51, 0.3);
+    padding: 5px;
+    margin: 5px 0;
+}
+.courses_display li:nth-child(odd) {
+    background: rgba(51, 51, 51, 0.5);
+}
+.courses_display li:nth-child(even) {
+    background: rgba(51, 51, 51, 0.3);
+}
+
+.post_display {
+    color: rgb(255, 255, 255);
+    background-color: rgba(51, 51, 51, 0.6);
+    width: 670px;
+    height: 450px;
+    float: left;
+    padding: 5px;
+    overflow: auto;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    margin-left: 10px;
+    background-color: rgba(51, 51, 51, 0.3);
+    overflow: hidden;
+    color: #f2f2f2;
+}
+
+footer .copyrights {
+    font-size: 10px;
+    float: right;
+}
+footer .enterprise {
+    font-size: 20px;
+    font-weight: bold;
+    bottom: 0;
 }
