--- a/viewer/templates/group_list.html
+++ b/viewer/templates/group_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Grupy</h1>
+  <h1>List of Groups</h1>
     {% for group in object_list %}
         <ul class="a_list">
             <li>
