--- a/viewer/templates/course.html
+++ b/viewer/templates/course.html
@@ -2,35 +2,40 @@
 
 {% block content %}
     <h1>{{ course }}</h1>
-    <div class="post-display">
-      <ul>
-          <h3>Posts</h3>
-        {% for post in posts %}
-        <l>
-          {{ post.user_id.first_name }} {{ post.user_id.last_name }}, {{ post.published }}: {{ post.content }}
-        </l>
-          {% endfor %}
-      </ul>
-    </div>
-    <div class="members_display">
-        <ul>
-            <h3>Members</h3>
-            {% for member in members %}
-            <l>
-                {{ member.user.first_name }} {{ member.user.last_name }}
-            </l>
-            {% endfor %}
-        </ul>
-    </div>
-    <div class="lessons_display">
-        <ul>
-            <h3>Lessons</h3>
-            {% for lesson in lessons %}
-            <l>
-                <a href="{% url 'lesson' lesson.slug %}">{{ lesson.name }}</a>
-            </l>
-            {% endfor %}
-        </ul>
-    </div>
+        <div class="flex-container">
+            <div class="members_display">
+                <ul>
+                    <h3>Members</h3>
+                    {% for member in members %}
+                    <li>
+                        {{ member.user.first_name }} {{ member.user.last_name }}
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
 
+            <div class="post-display">
+              <ul>
+                  <h3>Posts</h3>
+                    {% for post in posts %}
+                            <li>
+                              <span class="names_display">{{ post.user_id.first_name }} {{ post.user_id.last_name }}</span><br>
+                              <span class="published_display">{{ post.published }}</span><br>
+                              <span class="content_display">{{ post.content }}</span><br>
+                            </li>
+                    {% endfor %}
+              </ul>
+            </div>
+
+            <div class="courses_display">
+                <ul>
+                    <h3>Lessons</h3>
+                    {% for lesson in lessons %}
+                    <li>
+                        <a href="{% url 'lesson' lesson.slug %}">{{ lesson.name }}</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
 {% endblock %}
