--- a/viewer/templates/home.html
+++ b/viewer/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-        <h1>Welcome!</h1>
+        <h1>Welcome in E-SCHOOL!</h1>
         <p>Please, Log In or Sign Up!</p>
 {% endblock %}}
 
