--- a/viewer/templates/lesson.html
+++ b/viewer/templates/lesson.html
@@ -2,6 +2,7 @@
 
 {% block content %}
   <h1>{{ lesson.name }}</h1>
-    <p>{{ lesson.description }}</p>
-    <p>{{ lesson.content_type }}</p>
+    <p class="description">{{ lesson.description }}</p>
+    <p class="description">{{ lesson.content_type }}</p>
+    <!-- Maybe list of attachments? -->
 {% endblock %}
