cleaning up, models.py up-to-date, without Grade and so on, as well as views.py and forms.py inside viewer app

--- a/viewer/static/css/styles.css
+++ b/viewer/static/css/styles.css
@@ -152,7 +152,7 @@ body {
 }
 
 footer {
-    position: relative;
+    position: absolute;
     padding-top: 10px;
     display: block;
     margin-top: 10px;
