--- a/viewer/static/css/styles.css
+++ b/viewer/static/css/styles.css
@@ -66,7 +66,7 @@ body {
 .a_list {
     color: rgb(255, 255, 255);
     width: 350px;
-    height: 450px;
+    height: 50px;
     margin-left: 10px;
     padding: 5px;
     overflow: auto;
@@ -152,7 +152,7 @@ body {
 }
 
 footer {
-    position: relative;
+    position: absolute;
     padding-top: 10px;
     display: block;
     margin-top: 10px;
@@ -175,3 +175,36 @@ footer .enterprise {
     font-size: 15px;
     font-weight: bold;
 }
+
+.test_question_display {
+    display: block;
+    color: rgb(250, 255, 20);
+    width: 500px;
+    height: 20px;
+    float: left;
+    overflow: auto;
+}
+
+.test_answer_display {
+    color: rgb(255, 255, 255);
+    width: 100px;
+    height: 50px;
+    float: right;
+    overflow: auto;
+}
+.test_answer_display li {
+    display: block;
+    width: auto;
+    font-size: 15px;
+    background: rgba(51, 51, 51, 0.3);
+    padding: 5px;
+    margin: 5px 0;
+}
+.test_answer_display li:nth-child(odd) {
+    background: rgba(51, 51, 51, 0.5);
+}
+.test_answer_display li:nth-child(even) {
+    background: rgba(51, 51, 51, 0.3);
+}
+
+
