Added urls to forms: add, question, answer.
Test fill still not working.

--- a/testsheet/templates/testsheet.html
+++ b/testsheet/templates/testsheet.html
@@ -7,18 +7,36 @@
 
 
 {% block content %}
+
+<div class="test_question_display">
     {% for question in questions %}
-        <div class="test__question_display">
-                {{ question.question_number }}. {{ question.text_content }}
-        </div>
-                {% for answer in answers %}
-                    {% if answer.question_id.id == question.id %}
-                        <div class="test_answer_display">{{ answer }}</div>
-                    {% endif %}
-                {% endfor %}
-
+        <ul><br>
+            {{ question.question_number }}. {{ question.text_content }}
+        </ul><br>
+        {% for answer in answers %}
+            {% if answer.question_id.id == question.id %}
+                <div class="test_answer_display">{{ answer }}</div>
+            {% endif %}
+        {% endfor %}
+        <br>
     {% endfor %}
+</div>
+<div class="pagination">
+    <span class="step-links"><br>
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
 
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
 
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 {% endblock %}
 
