--- a/viewer/static/css/styles.css
+++ b/viewer/static/css/styles.css
@@ -177,19 +177,25 @@ footer .enterprise {
 }
 
 .test_question_display {
-    display: block;
-    color: rgb(250, 255, 20);
-    width: 500px;
-    height: 20px;
-    float: left;
+    display: inline-block;
+    position: center;
+    background: #dddddd;
+    padding: 10px;
+    margin: 10px;
+    color: rgb(0, 0, 0);
+    width: 600px;
+    height: 600px;
     overflow: auto;
 }
 
 .test_answer_display {
-    color: rgb(255, 255, 255);
-    width: 100px;
-    height: 50px;
-    float: right;
+    display: inline-block;
+    background: gray;
+    margin:5px;
+    padding:5px;
+    color: rgb(50, 50, 50);
+    width: auto;
+    height: auto;
     overflow: auto;
 }
 .test_answer_display li {
@@ -198,7 +204,7 @@ footer .enterprise {
     font-size: 15px;
     background: rgba(51, 51, 51, 0.3);
     padding: 5px;
-    margin: 5px 0;
+    margin: 5px;
 }
 .test_answer_display li:nth-child(odd) {
     background: rgba(51, 51, 51, 0.5);
