--- a/viewer/templates/course.html
+++ b/viewer/templates/course.html
@@ -14,7 +14,7 @@
                 </ul>
             </div>
 
-            <div class="post-display">
+            <div class="post_display">
               <ul>
                   <h3>Posts</h3>
                     {% for post in posts %}
