--- a/viewer/templates/creation_form_course_etc.html
+++ b/viewer/templates/creation_form_course_etc.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Wyślij" class="btn btn-primary">
-    </form>
+    <div class="login">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Wyślij" class="btn btn-primary">
+        </form>
+    </div>
 {% endblock %}
