--- a/testsheet/templates/testsheet.html
+++ b/testsheet/templates/testsheet.html
@@ -5,20 +5,35 @@
     </h1>
 {% endblock %}
 
-
 {% block content %}
-    {% for question in questions %}
-        <div class="test__question_display">
-                {{ question.question_number }}. {{ question.text_content }}
-        </div>
-                {% for answer in answers %}
-                    {% if answer.question_id.id == question.id %}
-                        <div class="test_answer_display">{{ answer }}</div>
-                    {% endif %}
-                {% endfor %}
+    <div class="a_list">
+        {% for question in questions %}
+            <ul>
+                <li>{{ question.question_number }}. {{ question.text_content }}</li>
+            </ul>
+            {% for answer in answers %}
+                {% if answer.question_id.id == question.id %}
+                    <li>{{ answer }}</li>
+                {% endif %}
+            {% endfor %}
+            <br>
+        {% endfor %}
+    </div>
 
-    {% endfor %}
-
-
+    <!-- <div class="pagination">
+        <span class="step-links"><br>
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div> -->
 {% endblock %}
 
