--- a/viewer/static/css/styles.css
+++ b/viewer/static/css/styles.css
@@ -3,7 +3,7 @@ body {
     background-size: cover;
     height: 100%;
     overflow: auto;
-    font-family: Verdana, serif;
+    font-family: Helvetica, serif;
 }
 
 .topnav {
@@ -66,38 +66,39 @@ body {
 .a_list {
     color: rgb(255, 255, 255);
     width: 350px;
-    height: 50px;
+    /*height:350px;*/
     margin-left: 10px;
     padding: 5px;
     overflow: auto;
 }
 .a_list li {
-    display: inline-block;
     width: auto;
     background: rgba(51, 51, 51, 0.3);
     padding: 5px 10px;
     margin: 5px 0;
 }
 .a_list li:nth-child(odd) {
-    background: rgba(51, 51, 51, 0.5);
+    background: rgba(51, 51, 51, 0.4);
 }
 .a_list li:nth-child(even) {
-    background: rgba(51, 51, 51, 0.3);
+    background: rgba(51, 51, 51, 0.2);
 }
 
 .flex-container {
     display: flex;
     flex-flow: row wrap;
     width: 100%;
-    background-color: rgba(51, 51, 51, 0.3);
+    /*background-color: rgba(51, 51, 51, 0.3);*/
 }
 
 .members_display {
     color: rgb(255, 255, 255);
+    background-color: rgba(51, 51, 51, 0.3);
     width: 300px;
     height: 450px;
     float: left;
     overflow: auto;
+    margin: 10px;
 }
 .members_display li {
     display: inline-block;
@@ -116,10 +117,12 @@ body {
 
 .courses_display {
     color: rgb(255, 255, 255);
+    background-color: rgba(51, 51, 51, 0.3);
     width: 400px;
     height: 450px;
     float: right;
     overflow: auto;
+    margin: 10px;
 }
 .courses_display li {
     display: inline-block;
@@ -140,23 +143,23 @@ body {
     color: rgb(255, 255, 255);
     background-color: rgba(51, 51, 51, 0.6);
     width: 475px;
-    height: 450px;
+    height: 440px;
     float: left;
     padding: 5px;
     overflow: auto;
+    margin: 10px;
 }
-
+.table {
+    display: block;
+}
 .description {
     color: rgb(0, 0, 0);
-    background-color: rgba(231, 228, 228, 0.7);
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 footer {
     position: absolute;
-    padding-top: 10px;
     display: block;
-    margin-top: 10px;
-    box-sizing: border-box;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -176,35 +179,6 @@ footer .enterprise {
     font-weight: bold;
 }
 
-.test_question_display {
-    display: block;
-    color: rgb(250, 255, 20);
-    width: 500px;
-    height: 20px;
-    float: left;
-    overflow: auto;
-}
 
-.test_answer_display {
-    color: rgb(255, 255, 255);
-    width: 100px;
-    height: 50px;
-    float: right;
-    overflow: auto;
-}
-.test_answer_display li {
-    display: block;
-    width: auto;
-    font-size: 15px;
-    background: rgba(51, 51, 51, 0.3);
-    padding: 5px;
-    margin: 5px 0;
-}
-.test_answer_display li:nth-child(odd) {
-    background: rgba(51, 51, 51, 0.5);
-}
-.test_answer_display li:nth-child(even) {
-    background: rgba(51, 51, 51, 0.3);
-}
 
 
