--- a/viewer/templates/teacher_main.html
+++ b/viewer/templates/teacher_main.html
@@ -3,24 +3,24 @@
 {% block content %}
     <div class="flex-container">
 
-        <div class="groups_display">
+        <div class="a_list">
             <ul>
                 <h3>Groups</h3>
                 {% for group in groups %}
-                <l>
+                <li>
                     {{ group }}
-                </l>
+                </li>
                 {% endfor %}
             </ul>
         </div>
 
-        <div class="courses_display">
+        <div class="a_list">
             <ul>
                 <h3>Courses</h3>
                 {% for course in object_list %}
-                <l>
+                <li>
                     <a href="{% url 'course' course.slug %}">{{ course }}</a>
-                </l>
+                </li>
                 {% endfor %}
             </ul>
         </div>
