--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -12,18 +12,24 @@
     <header>
         <section class="topnav">
             <div class="brand">
+                {% if user.groups.all.0.name == "teacher" %}
+                <a href="{% url 'teacher_main' %}">E-SCHOOL</a>
+                {% elif user.groups.all.0.name == "student" %}
+                <a href="{% url 'group' user.profile_user.group_id.slug %}">E-SCHOOL</a>
+                {% else %}
                 E-SCHOOL
+                {% endif %}
             </div>
             <div class="navbar-nav ml-auto">
                     <div class="nav-item dropdown">
                         {% if user.is_authenticated %}
                             <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown">
-                                {% if user.first_name %}Witaj, {{ user.first_name }}!
+                                {% if user.first_name %}Hello, {{ user.first_name }}!
                                 {% else %}Witaj, {{ user.username }}!{% endif %}
                             </a>
                             <div class="dropdown-menu dropdown-menu-right">
-                                <a class="dropdown-item text-right" href="{% url 'logout_view' %}">Wyloguj się</a>
-                                <a class="dropdown-item text-right" href="{% url 'password_change_view' %}">Zmień hasło</a>
+                                <a class="dropdown-item text-right" href="{% url 'logout_view' %}">Logout</a>
+                                <a class="dropdown-item text-right" href="{% url 'password_change_view' %}">Chenge Password</a>
                             </div>
                         {% else %}
                             <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown">
