--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <section class="topnav">
-            <div class="brand">
+            <div class="brand dropdown-menu dropdown-menu-left">
                 {% if user.groups.all.0.name == "teacher" %}
                 <a href="{% url 'teacher_main' %}">E-SCHOOL</a>
                 {% elif user.groups.all.0.name == "student" %}
@@ -25,11 +25,11 @@
                         {% if user.is_authenticated %}
                             <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown">
                                 {% if user.first_name %}Hello, {{ user.first_name }}!
-                                {% else %}Witaj, {{ user.username }}!{% endif %}
+                                {% else %}Hello, {{ user.username }}!{% endif %}
                             </a>
                             <div class="dropdown-menu dropdown-menu-right">
                                 <a class="dropdown-item text-right" href="{% url 'logout_view' %}">Logout</a>
-                                <a class="dropdown-item text-right" href="{% url 'password_change_view' %}">Chenge Password</a>
+                                <a class="dropdown-item text-right" href="{% url 'password_change_view' %}">Change Password</a>
                             </div>
                         {% else %}
                             <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown">
