--- a/viewer/templates/upload_form_attachment.html
+++ b/viewer/templates/upload_form_attachment.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="login">
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Wyślij" class="btn btn-primary">
     </form>
+</div>
 {% endblock %}
